fix croppen background for auth, add esc handler

--- a/src/blocks/login-form/login-form.css
+++ b/src/blocks/login-form/login-form.css
@@ -5,4 +5,5 @@
   font-size: 18px;
   line-height: 22px;
   color: #fff;
+  height: 100vh;
 }
